--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
+cuda-python==11.6.0
 cycler==0.11.0
+Cython==0.29.26
+dill==0.3.4
 fonttools==4.28.5
+imageio==2.14.1
 kiwisolver==1.3.2
+llvmlite==0.37.0
 matplotlib==3.5.1
-numpy==1.22.0
+multiprocess==0.70.12.2
+networkx==2.6.3
+numba==0.54.1
+numpy==1.20.3
 packaging==21.3
 Pillow==9.0.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
+PyWavelets==1.2.0
+scikit-image==0.19.1
+scipy==1.7.3
 six==1.16.0
+tifffile==2021.11.2
+ujson==5.1.0
